--- a/style.css
+++ b/style.css
@@ -1,87 +1,119 @@
-*{
+/* Default styles for all screens */
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box; /* Include padding and border in element dimensions */
 }
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
 }
-.logo{
-    color: #050505;
-    cursor:grab;
+
+/* Header */
+.header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    align-items: center;
 }
-.searchbar{
+
+.logo {
+    color: #050505;
+    cursor: grab;
+}
+
+/* Searchbar */
+.searchbar {
     display: flex;
     border: solid black 2px;
-    width: 30%;
-    padding: 15px;
+    width: 100%;
+    padding: 10px;
     justify-content: space-around;
     border-radius: 30px;
     transition-duration: 1s;
 }
-.header{
+
+/* Filters */
+.filter {
     display: flex;
-    justify-content: space-between;
-    padding: 5px;
-    position: sticky;
-    top: 0px;
-    background-color: white;
-    align-items: center;
-}
-.searchbar:hover{
-    transform: scale(1.05);
-    color: #ff4668;
-}
-.filter{
-    display: flex;
-    padding: 5px;
+    padding: 10px;
     justify-content: space-around;
     text-align: center;
     cursor: pointer;
-    background-color:white;
+    background-color: white;
     text-decoration: none;
 }
-.filterbox:hover{
-    color: #ff4668;
-}
-.hotels{
+
+/* Hotels */
+.hotels {
     display: flex;
-    padding: 15px;
+    padding: 10px;
     flex-wrap: wrap;
     justify-content: space-around;
     cursor: pointer;
     transition-duration: 20ms;
 }
-.footer{
-    padding: 5px;
+
+/* Footer */
+.footer {
+    padding: 10px;
     background-color: rgb(255, 255, 255);
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
     width: 100%;
 }
-img{
+
+/* Images */
+img {
     transition-duration: 1s;
     border-radius: 10px;
+    max-width: 100%;
+    height: auto;
 }
 
-.login:hover{
+/* Login */
+.login:hover {
     color: #ff4668;
 }
-.logo:hover{
+
+.logo:hover {
     color: rgb(247, 11, 11);
 }
 
-.login{
+.login {
     cursor: pointer;
 }
+/*Media query for responsive */
 
+@media (max-width: 768px) {
+    .searchbar {
+        width: 100%;
+    }
+    .header {
+        padding: 5px;
+    }
+}
 
+@media (max-width: 480px) {
+    .searchbar {
+        padding: 5px;
+    }
+    .header {
+        padding: 5px;
+    }
+  }
+
+/* Button Overlay */
 .button-overlay {
     position: relative;
     display: inline-block;
     margin-left: 150px;
     margin-top: 20px;
-
 }
+
 .button-overlay button {
     position: absolute;
     top: 90%;
@@ -94,55 +126,25 @@ img{
     cursor: pointer;
 }
 
-.button-overlay h1{
+.button-overlay h1 {
     text-align: center;
     color: #000;
 }
 
-.button-overlay p{
+.button-overlay p {
     font-style: italic;
-    text-size-adjust: 20px;
+    font-size: 20px;
     color: #000;
 }
 
-.button-overlay button:hover{
+.button-overlay button:hover {
     background-color: white;
     color: rgb(246, 19, 19);
 }
 
-.filter a{
+.filter a {
     text-decoration: none;
 }
 
-.first{
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    
 
-}
 
-.outline{
-    border: 2px solid #000; 
-    padding: 10px; 
-    background-color: #f2f2f2;   
-}
-
-.mainimg{
-    margin-left: 350px;
-}
-
-.sociallink{
-    margin-bottom: 50px;
-    size: 30px;
-
-}
-/* .bttn{
-    margin-left: 1450px;
-    background-color: black;
-    padding: 10px;
-    border-radius: 10px;
-    bottom: 5px;
-} */
-.hotelsbox{
-    border: solid 2px;
-}
